--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     <h2>Get Started</h2>
     <p>Get the package:</p>
-    <pre>bower install</pre>
+    <pre>bower install ng-caption-hover</pre>
 
     <p>Add the script tags:</p>
     <pre>
